# rdk-blercudaemon

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README
daemon/: CMakeLists.txt
daemon/resources/: config.default.json  config.rdk.json  resources.default.qrc  resources.rdk.qrc
daemon/source/: cmdlineoptions.cpp  cmdlineoptions.h  main.cpp
daemon/source/bleconnparamchanger/: CMakeLists.txt  bleconnparamchanger.cpp  bleconnparamchanger.h  bleconnparamchanger.pri  bleconnparamdevice.cpp  bleconnparamdevice.h
daemon/source/blercu/: CMakeLists.txt  blegattcharacteristic.h  blegattdescriptor.h  blegattprofile.h  blegattservice.h  blercu.pri  blercuadapter.h  blercuanalytics.cpp  blercuanalytics.h  blercucontroller.cpp  blercucontroller.h  blercucontroller_p.h  blercudevice.h  blercuerror.cpp  blercuerror.h  blercupairingstatemachine.cpp  blercupairingstatemachine.h  blercurecovery.cpp  blercurecovery.h  blercuscannerstatemachine.cpp  blercuscannerstatemachine.h  btrmgradapter.cpp  btrmgradapter.h
daemon/source/blercu/bleservices/: CMakeLists.txt  blercuaudioservice.h  blercubatteryservice.h  blercudeviceinfoservice.h  blercufindmeservice.h  blercuinfraredservice.h  blercuremotecontrolservice.h  blercuservices.h  blercuservicesfactory.cpp  blercuservicesfactory.h  blercutouchservice.h  blercuupgradeservice.h  services.pri
daemon/source/blercu/bleservices/gatt/: CMakeLists.txt  gatt_audiopipe.cpp  gatt_audiopipe.h  gatt_audioservice.cpp  gatt_audioservice.h  gatt_batteryservice.cpp  gatt_batteryservice.h  gatt_deviceinfoservice.cpp  gatt_deviceinfoservice.h  gatt_findmeservice.cpp  gatt_findmeservice.h  gatt_infraredservice.cpp  (+12 more)
daemon/source/blercu/bluez/: CMakeLists.txt  blegattcharacteristic.cpp  blegattcharacteristic_p.h  blegattdescriptor.cpp  blegattdescriptor_p.h  blegatthelpers.h  blegattnotifypipe.cpp  blegattnotifypipe.h  blegattprofile.cpp  blegattprofile_p.h  blegattservice.cpp  blegattservice_p.h  blercuadapter.cpp  blercuadapter_p.h  blercudevice.cpp  blercudevice_p.h  blercurecovery.cpp  blercurecovery.h  bluez.pri
daemon/source/configsettings/: CMakeLists.txt  configmodelsettings.cpp  configmodelsettings.h  configmodelsettings_p.h  configsettings.cpp  configsettings.h  configsettings.pri
daemon/source/dbus/: CMakeLists.txt  dbus.pri  dbusabstractadaptor.cpp  dbusabstractadaptor.h  dbusabstractinterface.cpp  dbusabstractinterface.h  dbusobjectmanager.cpp  dbusobjectmanager.h  dbusproperties.cpp  dbusproperties.h
daemon/source/dbus/android/: CMakeLists.txt  dbusbrokerservice.cpp  dbusbrokerservice.h
daemon/source/dbus/config/: com.sky.blercu.conf
daemon/source/irdb/: CMakeLists.txt  irdatabase.cpp  irdatabase.h  irdatabase_p.h  irdatabasefactory.cpp  irdatabasefactory.h  irdatabasepluginwrapper.cpp  irdatabasepluginwrapper.h  irdb.pri  irsignalset.cpp  irsignalset.h  qtvfs.cpp  qtvfs.h
daemon/source/irpairing/: CMakeLists.txt  irpairing.cpp  irpairing.h
daemon/source/monitors/: CMakeLists.txt  hcimonitor.cpp  hcimonitor.h  hcimonitor_p.h  hidmonitor.cpp  hidmonitor.h  lescanmonitor.cpp  lescanmonitor.h  lescanmonitor_p.h  monitors.pri  ringbuffer.cpp  ringbuffer.h
daemon/source/services/: CMakeLists.txt  service.pri  servicemanager.cpp  servicemanager.h  sky-bluetoothrcu.service
daemon/source/services/as/: CMakeLists.txt  blercuasservice.cpp  blercuasservice.h  blercufwupgradeservice.cpp  blercufwupgradeservice.h  blercustatuswebsocket.cpp  blercustatuswebsocket.h  btremotes.json  btremotes.qrc
daemon/source/services/dbus/: CMakeLists.txt  blercucontroller1_adaptor.cpp  blercucontroller1_adaptor.h  blercucontroller_proxy.cpp  blercucontroller_proxy.h  blercudebug1_adaptor.cpp  blercudebug1_adaptor.h  blercudevice1_adaptor.cpp  blercudevice1_adaptor.h  blercudevice_proxy.cpp  blercudevice_proxy.h  blercuhcicapture1_adaptor.cpp  blercuhcicapture1_adaptor.h  blercuinfrared1_adaptor.cpp  blercuinfrared1_adaptor.h  blercuupgrade1_adaptor.cpp  blercuupgrade1_adaptor.h  blercuvoice1_adaptor.cpp  blercuvoice1_adaptor.h
daemon/source/utils/: CMakeLists.txt  adpcmcodec.cpp  adpcmcodec.h  bleaddress.cpp  bleaddress.h  bleconnectionparameters.cpp  bleconnectionparameters.h  bleuuid.cpp  bleuuid.h  crc32.cpp  crc32.h  dbusadaptorhelpers.h  dumper.cpp  dumper.h  edid.cpp  edid.h  filedescriptor.cpp  filedescriptor.h  future.cpp  future.h  futureaggregator.cpp  futureaggregator.h  fwimagefile.cpp  fwimagefile.h  hcisocket.cpp  hcisocket.h  hcisocket_p.h  hidrawdevice.h  hidrawdevicemanager.h  inputdevice.h  inputdeviceinfo.cpp  inputdeviceinfo.h  inputdevicemanager.h  linuxdevice.cpp  linuxdevice.h  logging.cpp  logging.h  pnpid.cpp  pnpid.h  promise.cpp  (+17 more)
daemon/source/utils/linux/: containerhelpers.cpp  containerhelpers.h  containerhelpers_p.h  hidrawdevice.cpp  hidrawdevice_p.h  hidrawdevicemanager.cpp  hidrawdevicemanager_p.h  linuxdevice.cpp  linuxdevice.h  linuxdevicenotifier.cpp  linuxdevicenotifier.h  linuxdevicenotifier_p.h  linuxinputdevice.cpp  linuxinputdevice.h  linuxinputdeviceinfo.cpp  linuxinputdeviceinfo.h  linuxinputdevicemanager.cpp  linuxinputdevicemanager.h  utils_linux.pri
tools/: CMakeLists.txt
tools/source/: base_cmdhandler.cpp  base_cmdhandler.h  blercu_cmdhandler.cpp  blercu_cmdhandler.h  console.cpp  console.h  main.cpp
tools/source/blercu/: CMakeLists.txt  blercu.pri  blercucontroller1_interface.cpp  blercucontroller1_interface.h  blercudebug1_interface.cpp  blercudebug1_interface.h  blercudevice1_interface.cpp  blercudevice1_interface.h  blercuhcicapture1_interface.cpp  blercuhcicapture1_interface.h  blercuinfrared1_interface.cpp  blercuinfrared1_interface.h  blercuupgrade1_interface.cpp  blercuupgrade1_interface.h
tools/source/dbus/: CMakeLists.txt  dbus.pri  dbusabstractinterface.cpp  dbusabstractinterface.h  dbusproperties.cpp  dbusproperties.h
tools/source/readline/: CMakeLists.txt  readline.cpp  readline.h  readline.pri  readline_p.h
tools/source/utils/: CMakeLists.txt  audiowavfile.cpp  audiowavfile.h  bleaddress.cpp  bleaddress.h  unixsignalnotifier.cpp  unixsignalnotifier.h  unixsignalnotifier_p.h  utils.pri
(+25 files in other folders)
